Create and init DB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,17 @@ services:
       - Ports__Grpc=5005
       - Ports__Http=5004
 
+  postgres:
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: universystem-db
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+    ports: ["5432:5432"]
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+
+volumes:
+  postgres_data:
+
