Login request implemented

--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -12,6 +12,9 @@
     "Audience": "UniversityClients",
     "ExpiryHours": 2
   },
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=localhost;Database=universystem-db;Username=user;Password=password"
+  },
   "Ports": {
     "Grpc": "5005",
     "Http": "5004"
