--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - Jwt__ExpiryHours=2
       - Ports__Grpc=5005
       - Ports__Http=5004
+      - ConnectionStrings__PostgreSQL=Host=postgres;Database=universystem-db;Username=user;Password=password  
 
   postgres:
     image: postgres:latest
