Create RedisInterface. Login set jwt in Redis. Redis Added in dockerCompose

--- a/AuthService/Dockerfile
+++ b/AuthService/Dockerfile
@@ -3,15 +3,26 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
-EXPOSE 8080
+
+ENV HTTP_PORT=5004
+ENV GRPC_PORT=5005
+ENV ASPNETCORE_URLS=http://+:${HTTP_PORT};http://+:${GRPC_PORT}
+
+EXPOSE ${HTTP_PORT} ${GRPC_PORT}
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
+
 COPY ["AuthService/AuthService.csproj", "AuthService/"]
-RUN dotnet restore "./AuthService/AuthService.csproj"
+COPY ["Infrastructure/Infrastructure.csproj", "Infrastructure/"]
+
+RUN dotnet restore "AuthService/AuthService.csproj"
+RUN dotnet restore "Infrastructure/Infrastructure.csproj"
+
 COPY . .
-WORKDIR "/src/AuthService"
+
+WORKDIR /src/AuthService
 RUN dotnet build "./AuthService.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
