--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -13,7 +13,8 @@
     "ExpiryHours": 2
   },
   "ConnectionStrings": {
-    "PostgreSQL": "Host=localhost;Database=universystem-db;Username=user;Password=password"
+    "PostgreSQL": "Host=localhost;Database=universystem-db;Username=user;Password=password",
+    "Redis": "localhost:6379"
   },
   "Ports": {
     "Grpc": "5005",
