--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
       context: ./
       dockerfile: GatewayService/Dockerfile
     ports: ["5000:8080"]
-    depends_on:
-      - auth-service
+    depends_on: [auth-service, user-service]
     environment:
       - Services__AuthService=http://auth-service:5005
+      - Services__UserService=http://user-service:5005
 
 
   auth-service:
@@ -27,6 +27,16 @@ services:
       - Ports__Http=5004
       - ConnectionStrings__PostgreSQL=Host=postgres;Database=universystem-db;Username=user;Password=password
       - ConnectionStrings__Redis=redis:6379
+
+  user-service:
+    build: 
+      context: ./
+      dockerfile: UserService/Dockerfile
+    ports: ["5003:5005", "5006:5004"]
+    depends_on: [postgres, redis]
+    environment:
+      - Ports__Grpc=5005
+      - Ports__Http=5004
 
   redis:
     image: redis:7-alpine
