Implement Grpc in UserService

--- a/UserService/Dockerfile
+++ b/UserService/Dockerfile
@@ -13,10 +13,15 @@ EXPOSE ${HTTP_PORT} ${GRPC_PORT}
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
+
 COPY ["UserService/UserService.csproj", "UserService/"]
-RUN dotnet restore "./UserService/UserService.csproj"
+COPY ["Infrastructure/Infrastructure.csproj", "Infrastructure/"]
+
+RUN dotnet restore "UserService/UserService.csproj"
+RUN dotnet restore "Infrastructure/Infrastructure.csproj"
+
 COPY . .
-WORKDIR "/src/UserService"
+WORKDIR /src/UserService
 RUN dotnet build "./UserService.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
