--- a/UserService/UserService.csproj
+++ b/UserService/UserService.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+	<PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
 	<PackageReference Include="Google.Protobuf" Version="3.33.1" />
 	<PackageReference Include="Grpc.AspNetCore.Server" Version="2.71.0" />
 	<PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.71.0" />
@@ -16,6 +18,10 @@
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 	<ItemGroup>
