--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=localhost;Database=universystem-db;Username=user;Password=password"
+  },
   "Ports": {
     "Grpc": "5005",
     "Http": "5004"
