Added authorization in Swagger

--- a/GatewayService/appsettings.json
+++ b/GatewayService/appsettings.json
@@ -6,7 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "UniversityAuthService",
+    "Audience": "UniversityClients",
+    "Secret": "supersecretkey12345678901234567890"
+  },
   "Services": {
-    "AuthService": "http://localhost:5005"
+    "AuthService": "http://localhost:5001",
+    "UsersService": "http://localhost:5003"
   }
 }
