--- a/GatewayService/GatewayService.csproj
+++ b/GatewayService/GatewayService.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="Protos\auth.proto" />
+    <None Remove="Protos\user.proto" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,11 +22,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Protobuf Include="Protos\auth.proto" GrpsService="Client" />
+    <Protobuf Include="Protos\user.proto" GrpsService="Client" />
   </ItemGroup>
 
 </Project>
