--- a/GatewayService/appsettings.json
+++ b/GatewayService/appsettings.json
@@ -13,6 +13,6 @@
   },
   "Services": {
     "AuthService": "http://localhost:5001",
-    "UsersService": "http://localhost:5003"
+    "UserService": "http://localhost:5003"
   }
 }
