Caching in GetUserProfile() in UserService

--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL": "Host=localhost;Database=universystem-db;Username=user;Password=password"
+    "PostgreSQL": "Host=localhost;Database=universystem-db;Username=user;Password=password",
+    "Redis": "localhost:6379"
   },
   "Ports": {
     "Grpc": "5005",
