--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - Ports__Grpc=5005
       - Ports__Http=5004
       - ConnectionStrings__PostgreSQL=Host=postgres;Database=universystem-db;Username=user;Password=password
+      - ConnectionStrings__Redis=redis:6379
 
   redis:
     image: redis:7-alpine
