--- a/GatewayService/appsettings.json
+++ b/GatewayService/appsettings.json
@@ -13,6 +13,7 @@
   },
   "Services": {
     "AuthService": "http://localhost:5001",
-    "UserService": "http://localhost:5003"
+    "UserService": "http://localhost:5003",
+    "GradeService": "http://localhost:5007"
   }
 }
