--- a/GradeService/appsettings.json
+++ b/GradeService/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=localhost;Database=universystem-db;Username=user;Password=password"
+  },
+  "Ports": {
+    "Grpc": "5005",
+    "Http": "5004"
+  }
 }
