--- a/GradeService/GradeService.csproj
+++ b/GradeService/GradeService.csproj
@@ -15,6 +15,9 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+		<PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
