--- a/GradeService/appsettings.json
+++ b/GradeService/appsettings.json
@@ -9,6 +9,9 @@
   "ConnectionStrings": {
     "PostgreSQL": "Host=localhost;Database=universystem-db;Username=user;Password=password"
   },
+  "Kafka": {
+    "Broker": "localhost:29091"
+  },
   "Ports": {
     "Grpc": "5005",
     "Http": "5004"
