--- a/GradeService/Properties/launchSettings.json
+++ b/GradeService/Properties/launchSettings.json
@@ -21,9 +21,12 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "HTTP_PORT": "5004",
+        "GRPC_PORT": "5005",
+        "ASPNETCORE_URLS": "http://+:5004;http://+:5005"
       },
-      "publishAllPorts": true
+      "DockerfileRunArguments": "-p 5004:5004 -p 5005:5005",
+      "publishAllPorts": false
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
