--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.10.1" />
+	<PackageReference Include="Confluent.Kafka" Version="2.3.0" />
   </ItemGroup>
 
 </Project>
