--- a/AnaliticsService/appsettings.json
+++ b/AnaliticsService/appsettings.json
@@ -1,9 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Graylog"
+    ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Graylog",
+        "Args": {
+          "HostnameOrAddress": "localhost",
+          "Port": 12201,
+          "TransportType": "Udp"
+        }
+      }
+    ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
@@ -11,5 +25,9 @@
   },
   "Kafka": {
     "Broker": "localhost:29091"
+  },
+  "Graylog": {
+    "Host": "localhost",
+    "Port":  12201
   }
 }
