Logging,Tracing, Metrics

--- a/AnaliticsService/appsettings.json
+++ b/AnaliticsService/appsettings.json
@@ -4,7 +4,7 @@
       "Serilog.Sinks.Console",
       "Serilog.Sinks.Graylog"
     ],
-    "MinimumLevel": "Information",
+    "MinimumLevel": "Debug",
     "WriteTo": [
       {
         "Name": "Console"
