--- a/GradeService/appsettings.json
+++ b/GradeService/appsettings.json
@@ -1,9 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Graylog"
+    ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Graylog",
+        "Args": {
+          "HostnameOrAddress": "localhost",
+          "Port": 12201,
+          "TransportType": "Udp"
+        }
+      }
+    ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
@@ -15,5 +29,13 @@
   "Ports": {
     "Grpc": "5005",
     "Http": "5004"
+  },
+  "Graylog": {
+    "Host": "localhost",
+    "Port": 12201
+  },
+  "Jaeger": {
+    "Host": "localhost",
+    "Port": 6831
   }
 }
