--- a/GatewayService/appsettings.json
+++ b/GatewayService/appsettings.json
@@ -15,5 +15,9 @@
     "AuthService": "http://localhost:5001",
     "UserService": "http://localhost:5003",
     "GradeService": "http://localhost:5007"
+  },
+  "Jaeger": {
+    "Host": "localhost",
+    "Port": 6831
   }
 }
