--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - Services__AuthService=http://auth-service:5005
       - Services__UserService=http://user-service:5005
       - Services__GradeService=http://grade-service:5005
+      - Jaeger__Host=jaeger
+      - Jaeger__Port=6831
 
 
   auth-service:
@@ -56,6 +58,10 @@ services:
       - Ports__Http=5004
       - ConnectionStrings__PostgreSQL=Host=postgres;Database=universystem-db;Username=user;Password=password
       - Kafka__Broker=broker-1:9091
+      - Graylog__Host=graylog
+      - Graylog__Port=12201
+      - Jaeger__Host=jaeger
+      - Jaeger__Port=6831
 
   analytics-service:
     build: 
@@ -157,17 +163,21 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'LISTENER_INTERNAL:PLAINTEXT,LISTENER_LOCAL:PLAINTEXT'
       KAFKA_DEFAULT_REPLICATION_FACTOR: '2'
 
-  # prometheus:
-  #   image: prom/prometheus
-  #   ports: ["9090:9090"]
-  #   volumes:
-  #     - ./prometheus.yml:/etc/prometheus/prometheus.yml
+  jaeger:
+    image: jaegertracing/all-in-one:${JAEGER_VERSION:-latest}
+    ports:
+      - "16686:16686"
+      - "6831:6831/udp"
+
+  prometheus:
+    image: prom/prometheus
+    ports: ["9090:9090"]
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
   
-  # grafana:
-  #   image: grafana/grafana
-  #   ports: ["3000:3000"]
-  #   environment:
-  #     - GF_SECURITY_ADMIN_PASSWORD=admin
+  grafana:
+    image: grafana/grafana
+    ports: ["3000:3000"]
 
   graylog:
     image: "graylog/graylog:6.0.2"
